# trade_bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  celery_app.py  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/core/: database.py  exceptions.py  logging.py
backend/app/modules/admin/: __init__.py
backend/app/modules/analysis/: __init__.py
backend/app/modules/auth/: __init__.py
backend/app/modules/backtest/: __init__.py
backend/app/modules/backtests/: router.py  schemas.py  service.py
backend/app/modules/bot/: command_logs.py  router.py  service.py
backend/app/modules/market_data/: markets.py  models.py  repository.py  router.py  schemas.py  service.py  (+1 more)
backend/app/shared/: errors.py  middleware.py
backend/migrations/: env.py
backend/migrations/versions/: 20260527_0001_init_schema.py  20260528_0002_watchlist_refresh_fields.py  20260528_0003_watchlist_timestamps.py  20260529_0004_daily_bars_hypertable.py  20260529_0005_observability.py  20260529_0006_dragon_tiger_unique.py  20260530_0007_strategy_kpi_snapshots.py  20260530_0008_strategy_subscriptions.py  20260530_0009_strategy_extensions.py
backend/scripts/: backfill_dragon_tiger_history.py  backfill_history.py
backend/tests/unit/: test_backtests_service.py  test_bot_command_logging.py  test_celery_tasks.py  test_market_data_quote_fallback.py  test_market_data_router.py  test_market_data_sync_tracking.py  test_screener_backtest_extended.py  test_screener_backtest_service.py  test_strategies_combo.py  test_strategies_service.py  test_strategies_service_extended.py  test_strategies_subscriptions.py  test_sync_run_service.py  test_watchlist_service.py
(+102 files in other folders)
